--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,8 +17,6 @@ permissions:
 
 env:
   CARGO_TERM_COLOR: always
-  CARGO_HOME: ${{ runner.temp }}/cargo
-  RUSTUP_HOME: ${{ runner.temp }}/rustup
 
 concurrency:
   group: release-${{ github.ref }}
@@ -41,8 +39,8 @@ jobs:
       uses: actions/cache@v4
       with:
         path: |
-          ${{ env.CARGO_HOME }}/registry
-          ${{ env.CARGO_HOME }}/git
+          ~/.cargo/registry
+          ~/.cargo/git
           target
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
