--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -117,6 +117,12 @@ jobs:
       if: contains(matrix.target, 'linux-musl')
       run: cargo install cargo-zigbuild
 
+    - name: Install Perl (Windows - for OpenSSL build)
+      if: matrix.os == 'windows-latest'
+      uses: shogo82148/actions-setup-perl@v1
+      with:
+        perl-version: '5.38'
+
     - name: Build release (musl with zigbuild)
       if: contains(matrix.target, 'linux-musl')
       run: cargo zigbuild --release --target ${{ matrix.target }} --workspace
