--- a/sb/Cargo.toml
+++ b/sb/Cargo.toml
@@ -59,8 +59,12 @@ syntect = { version = "5", default-features = false, features = ["default-fancy"
 once_cell = "1"
 similar = "2"
 
-# Git support
+# Git support - use vendored-openssl on Unix, native TLS on Windows
+[target.'cfg(not(windows))'.dependencies]
 git2 = { version = "0.20", features = ["vendored-openssl"] }
+
+[target.'cfg(windows)'.dependencies]
+git2 = { version = "0.20" }
 
 [dev-dependencies]
 tempfile = "3.8"
