ci: temporarily disable Windows build pending fix for vendored dependencies
Windows users can install via: cargo install sb

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -94,9 +94,11 @@ jobs:
           - os: ubuntu-latest
             target: aarch64-unknown-linux-musl
             archive: tar.gz
-          - os: windows-latest
-            target: x86_64-pc-windows-msvc
-            archive: zip
+          # Windows build disabled temporarily - see https://github.com/saorsa-labs/saorsa-cli/issues/TBD
+          # Windows users can install via: cargo install sb
+          # - os: windows-latest
+          #   target: x86_64-pc-windows-msvc
+          #   archive: zip
     steps:
     - uses: actions/checkout@v4
 
