--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -301,4 +301,4 @@ jobs:
         draft: false
         prerelease: ${{ contains(github.ref_name, '-') }}
       env:
-        GITHUB_TOKEN: ${{ secrets.GH_RELEASE_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
