--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -223,6 +223,7 @@ jobs:
 
     # Create PKG installer for easy installation
     - name: Create PKG Installer
+      if: ${{ secrets.MACOS_INSTALLER_IDENTITY != '' }}
       env:
         MACOS_INSTALLER_IDENTITY: ${{ secrets.MACOS_INSTALLER_IDENTITY }}
       run: |
@@ -288,6 +289,7 @@ jobs:
 
     # Create ZIP for notarization (Apple requires ZIP format)
     - name: Create Notarization ZIP
+      if: ${{ secrets.MACOS_NOTARIZATION_APPLE_ID != '' }}
       run: |
         cd target/${{ matrix.target }}/release
         zip ../../../saorsa-cli-${{ matrix.target }}-notarize.zip sb sdisk saorsa
@@ -295,6 +297,7 @@ jobs:
 
     # Submit for notarization
     - name: Notarize Binaries
+      if: ${{ secrets.MACOS_NOTARIZATION_APPLE_ID != '' }}
       env:
         MACOS_NOTARIZATION_APPLE_ID: ${{ secrets.MACOS_NOTARIZATION_APPLE_ID }}
         MACOS_NOTARIZATION_PASSWORD: ${{ secrets.MACOS_NOTARIZATION_PASSWORD }}
@@ -309,6 +312,7 @@ jobs:
 
     # Notarize the PKG installer (can be stapled, unlike loose binaries)
     - name: Notarize PKG Installer
+      if: ${{ secrets.MACOS_INSTALLER_IDENTITY != '' && secrets.MACOS_NOTARIZATION_APPLE_ID != '' }}
       env:
         MACOS_NOTARIZATION_APPLE_ID: ${{ secrets.MACOS_NOTARIZATION_APPLE_ID }}
         MACOS_NOTARIZATION_PASSWORD: ${{ secrets.MACOS_NOTARIZATION_PASSWORD }}
@@ -332,6 +336,7 @@ jobs:
 
     # Note about binary notarization
     - name: Binary Notarization Note
+      if: ${{ secrets.MACOS_NOTARIZATION_APPLE_ID != '' }}
       run: |
         # For standalone binaries in tar.gz, notarization is verified online by Gatekeeper
         # The PKG installer is the recommended installation method (stapled, works offline)
@@ -360,6 +365,7 @@ jobs:
         retention-days: 7
 
     - name: Upload PKG artifact
+      if: ${{ secrets.MACOS_INSTALLER_IDENTITY != '' }}
       uses: actions/upload-artifact@v4
       with:
         name: saorsa-cli-${{ matrix.target }}-pkg
@@ -385,6 +391,16 @@ jobs:
         find artifacts -type f \( -name "*.tar.gz" -o -name "*.zip" -o -name "*.pkg" \) -exec mv {} release-files/ \;
         ls -la release-files/
 
+    - name: Import Saorsa release key
+      env:
+        GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+      run: |
+        if [ -z "$GPG_PRIVATE_KEY" ]; then
+          echo "GPG_PRIVATE_KEY secret is missing" >&2
+          exit 1
+        fi
+        echo "$GPG_PRIVATE_KEY" | gpg --batch --import
+
     - name: Generate checksums
       run: |
         cd release-files
@@ -392,13 +408,37 @@ jobs:
         echo "Generated checksums:"
         cat CHECKSUMS.txt
 
+    - name: Sign artifacts
+      env:
+        GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+      run: |
+        if [ -z "$GPG_PASSPHRASE" ]; then
+          echo "GPG_PASSPHRASE secret is missing" >&2
+          exit 1
+        fi
+        cd release-files
+        for file in *; do
+          echo "Signing $file"
+          gpg --batch --yes --pinentry-mode loopback \
+            --passphrase "$GPG_PASSPHRASE" \
+            --detach-sign --armor "$file"
+        done
+
+    - name: Upload detached signatures (artifact)
+      uses: actions/upload-artifact@v4
+      with:
+        name: saorsa-signatures
+        path: release-files/*.asc
+        retention-days: 30
+
     - name: Create Release
       uses: softprops/action-gh-release@v2
       with:
         tag_name: ${{ github.ref_name }}
         name: Release ${{ github.ref_name }}
         generate_release_notes: true
-        files: release-files/*
+        files: |
+          release-files/*
         draft: false
         prerelease: ${{ contains(github.ref_name, '-') }}
       env:
