--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -164,6 +164,11 @@ jobs:
     name: Build - ${{ matrix.target }} (signed)
     needs: test
     runs-on: macos-latest
+    env:
+      MACOS_INSTALLER_IDENTITY: ${{ secrets.MACOS_INSTALLER_IDENTITY }}
+      MACOS_NOTARIZATION_APPLE_ID: ${{ secrets.MACOS_NOTARIZATION_APPLE_ID }}
+      MACOS_NOTARIZATION_PASSWORD: ${{ secrets.MACOS_NOTARIZATION_PASSWORD }}
+      MACOS_NOTARIZATION_TEAM_ID: ${{ secrets.MACOS_NOTARIZATION_TEAM_ID }}
     strategy:
       fail-fast: false
       matrix:
@@ -223,7 +228,7 @@ jobs:
 
     # Create PKG installer for easy installation
     - name: Create PKG Installer
-      if: ${{ secrets.MACOS_INSTALLER_IDENTITY != '' }}
+      if: ${{ env.MACOS_INSTALLER_IDENTITY != '' }}
       env:
         MACOS_INSTALLER_IDENTITY: ${{ secrets.MACOS_INSTALLER_IDENTITY }}
       run: |
@@ -289,7 +294,7 @@ jobs:
 
     # Create ZIP for notarization (Apple requires ZIP format)
     - name: Create Notarization ZIP
-      if: ${{ secrets.MACOS_NOTARIZATION_APPLE_ID != '' }}
+      if: ${{ env.MACOS_NOTARIZATION_APPLE_ID != '' }}
       run: |
         cd target/${{ matrix.target }}/release
         zip ../../../saorsa-cli-${{ matrix.target }}-notarize.zip sb sdisk saorsa
@@ -297,7 +302,7 @@ jobs:
 
     # Submit for notarization
     - name: Notarize Binaries
-      if: ${{ secrets.MACOS_NOTARIZATION_APPLE_ID != '' }}
+      if: ${{ env.MACOS_NOTARIZATION_APPLE_ID != '' }}
       env:
         MACOS_NOTARIZATION_APPLE_ID: ${{ secrets.MACOS_NOTARIZATION_APPLE_ID }}
         MACOS_NOTARIZATION_PASSWORD: ${{ secrets.MACOS_NOTARIZATION_PASSWORD }}
@@ -312,7 +317,7 @@ jobs:
 
     # Notarize the PKG installer (can be stapled, unlike loose binaries)
     - name: Notarize PKG Installer
-      if: ${{ secrets.MACOS_INSTALLER_IDENTITY != '' && secrets.MACOS_NOTARIZATION_APPLE_ID != '' }}
+      if: ${{ env.MACOS_INSTALLER_IDENTITY != '' && env.MACOS_NOTARIZATION_APPLE_ID != '' }}
       env:
         MACOS_NOTARIZATION_APPLE_ID: ${{ secrets.MACOS_NOTARIZATION_APPLE_ID }}
         MACOS_NOTARIZATION_PASSWORD: ${{ secrets.MACOS_NOTARIZATION_PASSWORD }}
@@ -336,7 +341,7 @@ jobs:
 
     # Note about binary notarization
     - name: Binary Notarization Note
-      if: ${{ secrets.MACOS_NOTARIZATION_APPLE_ID != '' }}
+      if: ${{ env.MACOS_NOTARIZATION_APPLE_ID != '' }}
       run: |
         # For standalone binaries in tar.gz, notarization is verified online by Gatekeeper
         # The PKG installer is the recommended installation method (stapled, works offline)
@@ -365,7 +370,7 @@ jobs:
         retention-days: 7
 
     - name: Upload PKG artifact
-      if: ${{ secrets.MACOS_INSTALLER_IDENTITY != '' }}
+      if: ${{ env.MACOS_INSTALLER_IDENTITY != '' }}
       uses: actions/upload-artifact@v4
       with:
         name: saorsa-cli-${{ matrix.target }}-pkg
