--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
-members = ["sb", "sdisk", "cli"]
+members = ["sb", "sdisk", "cli", "crates/saorsa-cli-core", "crates/saorsa-ui", "crates/saorsa-sb", "crates/saorsa-disk", "crates/saorsa-git", "crates/saorsa"]
+default-members = ["crates/saorsa"]
 resolver = "2"
 
 [workspace.package]
@@ -25,3 +26,6 @@ opt-level = 3
 lto = true
 codegen-units = 1
 strip = true
+
+[patch.crates-io]
+tui-textarea = { path = "vendor/tui-textarea" }
