--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -12,23 +12,22 @@ keywords = ["cli", "menu", "terminal", "saorsa"]
 categories = ["command-line-utilities"]
 
 [[bin]]
-name = "saorsa"
+name = "saorsa-cli"
 path = "src/main.rs"
 
 [dependencies]
 anyhow = "1"
 thiserror = "2"
-tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 clap = { version = "4.5", features = ["derive"] }
 
 # Terminal UI
-ratatui = "0.29"
+ratatui = "0.30"
 crossterm = "0.29"
 
 # HTTP client for downloading
-reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
+reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
 
 # JSON parsing
 serde = { version = "1", features = ["derive"] }
@@ -55,13 +54,10 @@ dialoguer = "0.11"
 # Configuration
 toml = "0.8"
 
-# Async utilities
-futures = "0.3"
-libloading = "0.8"
-
 # Version management
 semver = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
+saorsa-cli-core = { path = "../crates/saorsa-cli-core" }
 
 [dev-dependencies]
 tempfile = "3"
