--- a/sb/Cargo.toml
+++ b/sb/Cargo.toml
@@ -30,18 +30,18 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 
 # TUI + input
-ratatui = "0.29"         # UI framework
+ratatui = "0.30"         # UI framework
 crossterm = "0.29"       # cross‑platform terminal backend
 
-# Editor widget (aligned to ratatui 0.29)
-# NOTE: ensure the `ratatui` feature is on for compatibility
-tui-textarea = { version = "0.7", features = ["ratatui"] }
+# Rich editor + transient dependency on tui-textarea for auxiliary prompts
+edtui = { version = "0.11", features = ["mouse-support", "syntax-highlighting"] }
+tui-textarea = { version = "0.7", features = ["ratatui", "crossterm"] }
 
 # File tree widget
-tui-tree-widget = "0.23"
+tui-tree-widget = "0.24"
 
 # Markdown parsing/rendering to Ratatui Text
-tui-markdown = "0.3"
+tui-markdown = "0.3.7"
 
 # Filesystem utilities
 walkdir = "2"
@@ -52,7 +52,7 @@ pathdiff = "0.2"
 opener = "0.8"
 
 # Optional image rendering (enabled via `--features graphics`)
-ratatui-image = { version = "8", default-features = false, features = ["crossterm"] }
+ratatui-image = { version = "10.0.2", default-features = false, features = ["crossterm"] }
 image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
 
 # Syntax highlighting & diff
